discussion/kv_engine/184967/184967_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54850: wip

Change-Id: I453339fd9dcbe9cbd4dcd8f4c54a18cd8543d5ca

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2023-01-13 12:05:54.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-13 12:06:04.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332383/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-13 12:16:52.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22139/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/utilities/debug_variable.h b/utilities/debug_variable.h
index 55f4018fe..a390fbe36 100644
--- a/utilities/debug_variable.h
+++ b/utilities/debug_variable.h
@@ -87,7 +87,7 @@ public:
     }
 
     DebugVariable(const DebugVariable&amp;) = delete;
-    DebugVariable(DebugVariable&amp;&amp;) = delete;
+    DebugVariable(DebugVariable &amp;&amp;) = delete;
 
     DebugVariable&amp; operator=(const DebugVariable&amp;) = delete;
     DebugVariable&amp; operator=(DebugVariable&amp;&amp;) = delete;

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22139/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/785/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5347:41: error: no matching function for call to "makeMutationConsumerMessage" [clang-diagnostic-error]
                stream->messageReceived(makeMutationConsumerMessage(
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2044:69: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:40: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_utils.h:48:42: note: candidate function not viable: no known conversion from "CollectionID" to "std::optional<cb::durability::Requirements>" for 6th argument
std::unique_ptr<MutationConsumerMessage> makeMutationConsumerMessage(
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5385:27: error: no matching function for call to "makeMutationConsumerMessage" [clang-diagnostic-error]
                          makeMutationConsumerMessage(seqno,
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2044:69: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:40: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_utils.h:48:42: note: candidate function not viable: no known conversion from "CollectionID" to "std::optional<cb::durability::Requirements>" for 6th argument
std::unique_ptr<MutationConsumerMessage> makeMutationConsumerMessage(
                                         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/785/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5347:41:
error: no matching function for call to "makeMutationConsumerMessage" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/785/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/963/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\dcp_stream_test.cc(5345): error C2664: "std::unique_ptr<MutationConsumerMessage,std::default_delete<_Ty>> makeMutationConsumerMessage(uint64_t,Vbid,const std::string &,uint64_t,std::optional<std::string>,std::optional<cb::durability::Requirements>,bool,uint64_t)": cannot convert argument 6 from "CollectionID" to "std::optional<cb::durability::Requirements>" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/963/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1073/ : FAILURE

Compile error at [2023-01-13T12:11:39.429Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5347:41:
error: no matching function for call to "makeMutationConsumerMessage"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1073/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/791/ : FAILURE

Compile error at [2023-01-13T12:13:33.038Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5348:74:
error: could not convert ?collection.CollectionEntry::Entry::getId()? from ?CollectionID? to ?std::optional<cb::durability::Requirements>?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/791/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/796/ : FAILURE

Compile error at [2023-01-13T12:13:29.879Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5348:74:
error: could not convert ?collection.CollectionEntry::Entry::getId()? from ?CollectionID? to ?std::optional<cb::durability::Requirements>?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/796/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/804/ : FAILURE

Compile error at [2023-01-13T12:10:13.151Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5347:41:
error: no matching function for call to "makeMutationConsumerMessage"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/804/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/777/ : FAILURE

Compile error at [2023-01-13T12:12:16.069Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5347:41:
error: no matching function for call to "makeMutationConsumerMessage"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/777/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/797/ : FAILURE

Compile error at [2023-01-13T12:11:13.743Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:5347:41:
error: no matching function for call to "makeMutationConsumerMessage"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/797/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/756/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/806/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
